adds heder for the big screen size

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,12 +9,35 @@
   <link rel="stylesheet" type="text/css" href="./css/main.css" />
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1>Gulp starter</h1>
-        <p>Edit this file in <code>src/pages/index.html</code></p>
+  <div class="header-background">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <div class="menu">
+            <img class="menu__logo" src="src/assets/img/logo-white.svg" alt="logo">
+            <div class="menu__box">
+              <ul class="menu__list" class="d-flex justify-content-around">
+                <li class="menu__item">About us</li>
+                <li class="menu__item">About the project</li>
+                <li class="menu__item">Contact us</li>
+                <li class="menu__item">Sing in</li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
+
+      <div class="row">
+        <div class="col-12">
+          
+          <div class="information">
+            <div class="information__title">we don't want you to go to your work</div>
+            <h4 class="information__subtitle">just work from anywhere with us</h4>
+          </div>
+
+        </div>
+      </div>
+
     </div>
   </div>
 
