changes header and adds img background

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,7 +20,7 @@
                 <li class="menu__item">About us</li>
                 <li class="menu__item">About the project</li>
                 <li class="menu__item">Contact us</li>
-                <li class="menu__item">Sing in</li>
+                <li class="menu__item">Sign in</li>
               </ul>
             </div>
           </div>
