--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -41,6 +41,93 @@
     </div>
   </div>
 
+  <div class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="registration">
+            <div class="registration__box my-5">
+              <form action="">
+                <!-- title-->
+                <div class="row">
+                  <div class="col-sm-12">
+                    <h3>Registration</h3>
+                  </div>
+                </div>
+                  <!-- First/Last name-->
+                  <div class="form-group">
+                    <div class="row">
+                      <div class="col">
+                        <label for="formGroupExampleInputFirstName">First name</label>
+                        <input type="text" class="form-control" id="formGroupExampleInputFirstName">
+                      </div>
+                      <div class="col">
+                        <label for="formGroupExampleInputLastName">Last name</label>
+                        <input type="text" class="form-control" id="formGroupExampleInputLastName">
+                      </div>
+                    </div>
+                  </div>
+                  <!--Username-->
+                  <div class="form-group">
+                    <label for="inlineFormInputGroupUsername">Username</label>
+                    <div class="input-group mb-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">@</div>
+                      </div>
+                      <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username">
+                    </div>
+                  </div>
+                  <!-- Email -->
+                  <div class="form-group">
+                    <label for="exampleInputEmail1">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="you@example.com">
+                  </div>
+                  <!-- address -->
+                  <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                  </div>
+                  <!-- phone -->
+                  <div class="form-group">
+                    <label for="exampleInputPhone">Phone</label>
+                    <input type="phone" class="form-control" id="exampleInputPhone" aria-describedby="emailHelp" placeholder="+420 ...">
+                  </div>
+                  <!--  -->
+                  <div class="form-row">
+                      <div class="form-group col-md-4">
+                        <label for="inputCountry">Country</label>
+                        <select id="inputCountry" class="form-control">
+                          <option selected>Choose...</option>
+                          <option>Argentina</option>
+                          <option>Australia</option>
+                        </select>
+                      </div>
+                    <div class="form-group col-md-4">
+                      <label for="inputState">State</label>
+                      <select id="inputState" class="form-control">
+                        <option selected>Choose...</option>
+                        <option>Kansas</option>
+                        <option>Montana</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="inputZip">Zip</label>
+                      <input type="text" class="form-control" id="inputZip">
+                    </div>
+                  </div>
+                  <!-- hr -->
+                  <hr>
+                  <!-- button -->
+                  <button type="button" class="btn btn-primary btn-lg btn-block">Submit registration</button>
+                  
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="./assets/jquery-3.3.1.min.js"></script>
   <script src="./js/index.js" defer></script>
 </body>
