input email shows error message and success message

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -81,7 +81,7 @@
                   <div class="form-group has-feedback emailBlock">
                     <label for="exampleInputEmail1">Email</label>
                     <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="you@example.com">
-                    <div class="valid-feedback">
+                    <div class="valid-feedback change-info">
                       Looks good!
                     </div>
                   </div>
