--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -60,10 +60,16 @@
                       <div class="col">
                         <label for="formGroupExampleInputFirstName">First name</label>
                         <input type="text" name="firstName" class="form-control" id="formGroupExampleInputFirstName">
+                        <div class="valid-feedback change-info__firstName">
+                          Good!
+                        </div>
                       </div>
                       <div class="col">
                         <label for="formGroupExampleInputLastName">Last name</label>
                         <input type="text" name="lastName" class="form-control" id="formGroupExampleInputLastName">
+                        <div class="valid-feedback change-info__lastName">
+                          Good!
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -75,13 +81,16 @@
                         <div class="input-group-text">@</div>
                       </div>
                       <input type="text" name="username" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username">
+                      <div class="valid-feedback change-info__username">
+                        Good!
+                      </div>
                     </div>
                   </div>
                   <!-- Email -->
                   <div class="form-group has-feedback emailBlock">
                     <label for="exampleInputEmail1">Email</label>
                     <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="you@example.com">
-                    <div class="valid-feedback change-info">
+                    <div class="valid-feedback change-info__email">
                       Looks good!
                     </div>
                   </div>
