input address and phone show about error and success message

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -91,18 +91,24 @@
                     <label for="exampleInputEmail1">Email</label>
                     <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="you@example.com">
                     <div class="valid-feedback change-info__email">
-                      Looks good!
+                      Good!
                     </div>
                   </div>
                   <!-- address -->
                   <div class="form-group">
                     <label for="inputAddress">Address</label>
                     <input type="text" name="address" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    <div class="valid-feedback change-info__address">
+                      Good!
+                    </div>
                   </div>
                   <!-- phone -->
                   <div class="form-group">
                     <label for="exampleInputPhone">Phone</label>
                     <input type="phone" name="phone" class="form-control" id="exampleInputPhone" placeholder="+420 ...">
+                    <div class="valid-feedback change-info__phone">
+                      Good!
+                    </div>
                   </div>
                   <!--  -->
                   <div class="form-row">
@@ -125,6 +131,9 @@
                     <div class="form-group col-md-4">
                       <label for="inputZip">Zip</label>
                       <input type="text" name="zip" class="form-control" id="inputZip">
+                      <div class="valid-feedback change-info__zip">
+                        Good!
+                      </div>
                     </div>
                   </div>
                   <!-- hr -->
