--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -110,7 +110,7 @@
                       Good!
                     </div>
                   </div>
-                  <!--  -->
+                  <!-- country/state -->
                   <div class="form-row">
                       <div class="form-group col-md-4">
                         <label for="inputCountry">Country</label>
