changes logo url

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,10 +11,11 @@
 <body>
   <div class="header-background">
     <div class="container-fluid">
+
       <div class="row">
         <div class="col-12">
           <div class="menu">
-            <img class="menu__logo" src="src/assets/img/logo-white.svg" alt="logo">
+            <img class="menu__logo" src="./assets/img/logo-white.svg" alt="logo">
             <div class="menu__box">
               <ul class="menu__list" class="d-flex justify-content-around">
                 <li class="menu__item">About us</li>
@@ -29,12 +30,10 @@
 
       <div class="row">
         <div class="col-12">
-          
           <div class="information">
             <div class="information__title">we don't want you to go to your work</div>
             <h4 class="information__subtitle">just work from anywhere with us</h4>
           </div>
-
         </div>
       </div>
 
@@ -145,8 +144,7 @@
                   <!-- hr -->
                   <hr>
                   <!-- button -->
-                  <button type="submit" class="btn btn-primary btn-lg btn-block">Submit registration</button>
-                  
+                  <button type="submit" class="btn btn-primary btn-lg btn-block">Submit registration</button>  
               </form>
             </div>
           </div>
